--- a/add_recipe.html
+++ b/add_recipe.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Section: Header -->
     <header class="header">
         <a href="index.html" class="logo">
             <picture>
-                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
         </a>
     </header>
+    <!-- Section: Navigation Bar -->
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
@@ -34,6 +36,7 @@
     </nav>
     <div class="mainContent">
         <main>
+            <!-- Section Form  -->
             <section class="content">
                 <h2>Vilket recept vill du lägga till?</h2>
                 <div class="formContainer">
@@ -62,13 +65,12 @@
             </section>
         </main>
     </div>
-
-
+    <!-- Section Footer  -->
     <footer class="footer">
         <a href="index.html" class="footerLogo">
             <picture>
-                <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-                <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
             </picture>
             <p>ForkFolio-för dig som älskar mat!</p>
         </a>
@@ -84,7 +86,7 @@
 
         <div class="footerLinks">
             <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                     <img style="border:0;width:88px;height:31px"
                          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                          alt="Valid CSS!" >
@@ -95,6 +97,7 @@
 </div>
 
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -103,6 +106,7 @@
             topBar.className = "topBar";
         }
     }
+    // Message function for displaying message when the uses clicks save
     function showMessage() {
         document.getElementById('message').style.display = 'block';
     }
