--- a/categories.html
+++ b/categories.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Section: Header -->
     <header class="header">
         <a href="index.html" class="logo">
             <picture>
-                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
         </a>
     </header>
+    <!-- Section: Navigation Bar -->
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
@@ -32,7 +34,7 @@
             <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
     </nav>
-
+    <!-- Section: Categories of recipies section -->
     <div class="articleContainer">
         <main>
             <h1 id="category-title"> Category Title</h1>
@@ -65,7 +67,7 @@
                 </div>
                 <div class="category">
                     <div class="lunch vegetariskt">
-                        <h3>Plocktallrik<i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i></h3>
+                        <h3>Plocktallrik <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i></h3>
                         <picture class="lunch vegetariskt">
                             <source media="(min-width: 769px)" srcset="images/plock/plock_960.jpg">
                             <img src="images/plock/plock_480.jpg" alt="Plocktallrik">
@@ -79,7 +81,7 @@
                 </div>
                 <div class="category">
                     <div class="lunch vegetariskt">
-                        <h2>Underbar sallad</h2>
+                        <h3>Underbar sallad <i class="fa fa-leaf greenChoice fa-lg" aria-hidden="true"></i></h3>
                         <picture id="sallad">
                             <source media="(min-width: 769px)" srcset="images/sallad/sallad_960.jpg">
                             <img src="images/sallad/sallad_480.jpg" alt="Sallad">
@@ -119,11 +121,10 @@
                             Välj den sort som passar bäst för din rätt.</p>
                     </div>
                 </div>
-
                 <p>Att äta säsongsmat är inte bara gott utan också bra för miljön. Så njut av dessa hälsosamma grönsaker
                     och frukter när de är i säsong!</p>
+                <!--Section: Recipies links -->
                 <div class="sectionContainer">
-
                     <div class="category">
                         <h3>Till recepten</h3>
                         <div class="middag">
@@ -147,18 +148,16 @@
                             <a href="recipe.html?recipe=sallad" class="goToButton" style="vertical-align:middle"><span>Sallad </span></a>
                         </div>
                     </div>
-
                 </div>
-
             </div>
-
         </main>
     </div>
+    <!-- Section Footer  -->
     <footer class="footer">
         <a href="index.html" class="footerLogo">
             <picture>
-                <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-                <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
             </picture>
             <p>ForkFolio-för dig som älskar mat!</p>
         </a>
@@ -171,10 +170,9 @@
             <a href="categories.html?category=middag"><span>Middag </span></a>
             <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
         </div>
-
         <div class="footerLinks">
             <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                     <img style="border:0;width:88px;height:31px"
                          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                          alt="Valid CSS!" >
@@ -185,6 +183,7 @@
 </div>
 
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -194,7 +193,7 @@
         }
     }
 
-
+    // Function to make categories visible depending on the param sent by the url
     document.addEventListener('DOMContentLoaded', function() {
         const params = new URLSearchParams(window.location.search);
         const category = params.get('category');
