--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Section: Header -->
     <header class="header">
         <a href="index.html" class="logo">
             <picture>
-                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
         </a>
     </header>
+    <!-- Section: Navigation Bar -->
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
@@ -32,21 +34,24 @@
             <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
     </nav>
+    <!-- Section: Hero -->
     <div class="hero">
         <picture>
             <source media="(min-width: 1920px)" srcset="images/hero_1_4.jpg">
             <source media="(min-width: 961px)" srcset="images/hero_1920.jpg">
             <source media="(min-width: 481px)" srcset="images/hero_960.jpg">
-            <img src="images/hero_480.jpg" alt="several meals on a buffe">
+            <img src="images/hero_480.jpg" alt="Several meals on a buffet">
         </picture>
     </div>
     <div class="container">
         <main>
+            <!-- Section: Tags with categories -->
             <div class="sectionContainer">
                 <a href="categories.html?category=middag" class="tag" style="vertical-align:middle"><span>Middag </span></a>
                 <a href="categories.html?category=vegetariskt" class="tag" style="vertical-align:middle"><span>Vegetariskt </span></a>
                 <a href="categories.html?category=lunch" class="tag" style="vertical-align:middle"><span>Lunch </span></a>
             </div>
+            <!-- Section: My recipies section -->
             <section>
                 <h2 class="sectionTitle">Mina recept</h2>
                 <div class="sectionContainer">
@@ -101,9 +106,11 @@
                     </a>
                 </div>
             </section>
+            <!-- Section: Add recipie container -->
             <div class="sectionContainer">
                 <a href="add_recipe.html" class="addButton" style="vertical-align:middle"><span>Lägg till recept </span></a>
             </div>
+            <!-- Section: Articles section -->
             <section>
                 <h2 class="sectionTitle">Artiklar</h2>
                 <div class="sectionContainer">
@@ -133,8 +140,8 @@
                     </a>
 
                 </div>
-
             </section>
+            <!-- Section: Popular recipies section -->
             <section>
                 <h2 class="sectionTitle">Populära recept</h2>
                 <div class="sectionContainer">
@@ -192,12 +199,12 @@
             </section>
         </main>
     </div>
-
+    <!-- Section Footer  -->
     <footer class="footer">
         <a href="index.html" class="footerLogo">
             <picture>
-                <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-                <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
             </picture>
             <p>ForkFolio-för dig som älskar mat!</p>
         </a>
@@ -210,10 +217,10 @@
             <a href="categories.html?category=middag"><span>Middag </span></a>
             <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
         </div>
-
         <div class="footerLinks">
+            <!-- Link to validation  -->
             <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                     <img style="border:0;width:88px;height:31px"
                          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                          alt="Valid CSS!" >
@@ -224,6 +231,7 @@
 </div>
 
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -232,14 +240,13 @@
             topBar.className = "topBar";
         }
     }
-
+    //Toggle favourite icon function for changing heart icon when clicked
     function toggleFavourite(event, element) {
         event.preventDefault();
         event.stopPropagation();
         element.classList.toggle('fa-heart-o');
         element.classList.toggle('fa-heart');
     }
-
 </script>
 
 </body>
