--- a/my_recipies.html
+++ b/my_recipies.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Section: Header -->
     <header class="header">
         <a href="index.html" class="logo">
             <picture>
-                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
         </a>
     </header>
+    <!-- Section: Navigation Bar -->
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
@@ -32,7 +34,7 @@
             <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
     </nav>
-
+    <!-- Section: My recipies section -->
     <div class="articleContainer">
         <main>
             <h2 class="sectionTitle">Mina recept</h2>
@@ -47,6 +49,7 @@
                 </div>
                 <p>Här hittar du de recept du har bidragit med.</p>
             </div>
+            <!-- Section: My recipies cards section -->
             <div class="sectionContainer">
                 <a href="recipe.html?recipe=sallad" class="recipeCard">
                     <article>
@@ -101,12 +104,12 @@
         </main>
     </div>
 </div>
-
+<!-- Section Footer  -->
 <footer class="footer">
     <a href="index.html" class="footerLogo">
         <picture>
-            <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+            <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+            <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
         </picture>
         <p>ForkFolio-för dig som älskar mat!</p>
     </a>
@@ -119,10 +122,9 @@
         <a href="categories.html?category=middag"><span>Middag </span></a>
         <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
     </div>
-
     <div class="footerLinks">
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                 <img style="border:0;width:88px;height:31px"
                      src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                      alt="Valid CSS!" >
@@ -131,6 +133,7 @@
     </div>
 </footer>
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -138,6 +141,13 @@
         } else {
             topBar.className = "topBar";
         }
+    }
+    // Toggle favourite icon function for changing heart icon when clicked
+    function toggleFavourite(event, element) {
+        event.preventDefault();
+        event.stopPropagation();
+        element.classList.toggle('fa-heart-o');
+        element.classList.toggle('fa-heart');
     }
 </script>
 </body>
