--- a/recipe.html
+++ b/recipe.html
@@ -11,14 +11,16 @@
 </head>
 <body>
 <div class="wrapper">
+    <!-- Section: Header -->
     <header class="header">
         <a href="index.html" class="logo">
             <picture>
-                <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
             <h1 class="title">Forkfolio</h1>
         </a>
     </header>
+    <!-- Section: Navigation Bar -->
     <nav>
         <div class="topBar" id="topBar">
             <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
@@ -32,6 +34,7 @@
             <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
     </nav>
+    <!-- Section: Recipe content -->
     <div class="articleContainer">
         <main>
             <div class="topContainer">
@@ -72,10 +75,11 @@
                     </ul>
                 </div>
             </div>
-
+            <!-- Recipie instructions -->
             <div class="textContent">
                 <h1 id="recipe-title">Recipe Title</h1>
-                <p class="textIntro">Det här receptet är både enkelt att laga och passar bra att göra mycket av. Varför inte njuta tillsammans med familjen eller bjuda till fest?
+                <p class="textIntro">Det här receptet är både enkelt att laga och passar bra att göra mycket av.
+                    Varför inte njuta tillsammans med familjen eller bjuda till fest?
                     Om det är läge för knytkalas kan det här passa perfekt. Alla tar med sig något till bordet.</p>
                 <ol class="howList">
                     <li>Skala och hacka lök och grönsaker</li>
@@ -90,12 +94,12 @@
             </div>
         </main>
     </div>
-
+    <!-- Section Footer  -->
     <footer class="footer">
         <a href="index.html" class="footerLogo">
             <picture>
-                <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-                <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
             </picture>
             <p>ForkFolio-för dig som älskar mat!</p>
         </a>
@@ -108,10 +112,9 @@
             <a href="categories.html?category=middag"><span>Middag </span></a>
             <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
         </div>
-
         <div class="footerLinks">
             <p>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
                     <img style="border:0;width:88px;height:31px"
                          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
                          alt="Valid CSS!" >
@@ -122,6 +125,7 @@
 </div>
 
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
@@ -130,7 +134,7 @@
             topBar.className = "topBar";
         }
     }
-
+    // Function that looks for recipe param in url for displaying the image and title of the recipie pressed
     document.addEventListener('DOMContentLoaded', function() {
         const params = new URLSearchParams(window.location.search);
         const recipe = params.get('recipe');
