--- a/summer-cakes.html
+++ b/summer-cakes.html
@@ -10,105 +10,111 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="header">
-    <a href="index.html" class="logo">
-        <picture>
-            <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
-        </picture>
-        <h1 class="title">Forkfolio</h1>
-    </a>
-</header>
-<nav>
-    <div class="topBar" id="topBar">
-        <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
-            <span class="visually-hidden">Hamburger menu</span>
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="categories.html?category=lunch"><span>Lunch </span></a>
-        <a href="categories.html?category=middag"><span>Middag </span></a>
-        <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
-        <a href="my_recipies.html"><span>Mina recept</span></a>
-        <a href="add_recipe.html"><span>Lägg till recept</span></a>
-    </div>
-</nav>
-<div class="articleContainer">
-    <main>
-        <h1> Bästa sommartårtorna! </h1>
-        <div class="imageContainer">
+<div class="wrapper">
+    <!-- Section: Header -->
+    <header class="header">
+        <a href="index.html" class="logo">
             <picture>
-                <source media="(min-width: 600px)" srcset="images/cakes_960.jpg">
-                <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
-            <picture class="desktopOnly">
-                <source media="(min-width: 600px)" srcset="images/chocolate_cake/chocolate_cake_960.jpg">
-                <img src="images/chocolate_cake/chocolate_cake_480.jpg" alt="Bild på en chokladtårta">
-            </picture>
+            <h1 class="title">Forkfolio</h1>
+        </a>
+    </header>
+    <!-- Section: Navigation Bar -->
+    <nav>
+        <div class="topBar" id="topBar">
+            <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
+                <span class="visually-hidden">Hamburger menu</span>
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
+            <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
-        <div class="textContent">
-            <div class="textIntro">
-                Sommaren är här, och vad passar bättre än att njuta av en läcker tårta i solskenet?
-                Vi har utforskat de bästa sommartårtorna för att stilla ditt sötsug.
+    </nav>
+    <!-- Section: Article section -->
+    <div class="articleContainer">
+        <main>
+            <h1> Bästa sommartårtorna! </h1>
+            <div class="imageContainer">
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/cakes_960.jpg">
+                    <img src="images/cakes_480.jpg" alt="Bild på en sommartårta">
+                </picture>
+                <picture class="desktopOnly">
+                    <source media="(min-width: 600px)" srcset="images/chocolate_cake/chocolate_cake_960.jpg">
+                    <img src="images/chocolate_cake/chocolate_cake_480.jpg" alt="Bild på en chokladtårta">
+                </picture>
             </div>
-           <p>
-               Här är våra toppval:
-           </p>
-            <ul>
-                <li>
-                    <h2>Jordgubbstårta med vaniljkräm</h2>
-                    <p>En klassiker som aldrig går ur tiden. Saftiga jordgubbar, fluffig vaniljkräm och ett lager av mjuk sockerkaksbotten – en oslagbar kombination.</p>
-                </li>
-                <li>
-                    <h2>Citron- och blåbärstårta</h2>
-                    <p>För den som älskar friskt och syrligt. En luftig citronbotten toppad med blåbär och ett lager av len mascarponekräm.</p>
-                </li>
-                <li>
-                    <h2>Choklad- och hallontårta</h2>
-                    <p>Chokladälskare, denna är för er! En mörk chokladbotten med hallonmousse och ett överdrag av chokladganache.</p>
-                </li>
-                <li>
-                    <h2>Passionstårta med kokos</h2>
-                    <p>Exotisk och förförisk. En passionsfrukt- och kokosbotten med en fluffig fyllning av passionsfrukt och grädde.</p>
-                </li>
-                <li>
-                    <h2>Sommarbärstårta</h2>
-                    <p> Enkel men oemotståndlig. Blanda jordgubbar, hallon, blåbär och björnbär på en söt marängbotten och toppa med vispad grädde.</p>
-                </li>
-            </ul>
-            <p>Oavsett vilken sommartårta du väljer, se till att njuta av den i gott sällskap och med ett glas iskallt bubbel. Glad sommar!</p>
-        </div>
+            <div class="textContent">
+                <div class="textIntro">
+                    Sommaren är här, och vad passar bättre än att njuta av en läcker tårta i solskenet?
+                    Vi har utforskat de bästa sommartårtorna för att stilla ditt sötsug.
+                </div>
+                <p>
+                    Här är våra toppval:
+                </p>
+                <ul>
+                    <li>
+                        <h2>Jordgubbstårta med vaniljkräm</h2>
+                        <p>En klassiker som aldrig går ur tiden. Saftiga jordgubbar, fluffig vaniljkräm och ett lager av mjuk sockerkaksbotten – en oslagbar kombination.</p>
+                    </li>
+                    <li>
+                        <h2>Citron- och blåbärstårta</h2>
+                        <p>För den som älskar friskt och syrligt. En luftig citronbotten toppad med blåbär och ett lager av len mascarponekräm.</p>
+                    </li>
+                    <li>
+                        <h2>Choklad- och hallontårta</h2>
+                        <p>Chokladälskare, denna är för er! En mörk chokladbotten med hallonmousse och ett överdrag av chokladganache.</p>
+                    </li>
+                    <li>
+                        <h2>Passionstårta med kokos</h2>
+                        <p>Exotisk och förförisk. En passionsfrukt- och kokosbotten med en fluffig fyllning av passionsfrukt och grädde.</p>
+                    </li>
+                    <li>
+                        <h2>Sommarbärstårta</h2>
+                        <p> Enkel men oemotståndlig. Blanda jordgubbar, hallon, blåbär och björnbär på en söt marängbotten och toppa med vispad grädde.</p>
+                    </li>
+                </ul>
+                <p>Oavsett vilken sommartårta du väljer, se till att njuta av den i gott sällskap och med ett glas iskallt bubbel. Glad sommar!</p>
+            </div>
 
-    </main>
+        </main>
+    </div>
+    <!-- Section Footer  -->
+    <footer class="footer">
+        <a href="index.html" class="footerLogo">
+            <picture>
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
+            </picture>
+            <p>ForkFolio-för dig som älskar mat!</p>
+        </a>
+        <div class="footerLinks">
+            <a href="add_recipe.html">Lägg till recept</a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
+        </div>
+        <div class="footerLinks">
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
+        </div>
+        <div class="footerLinks">
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
+                    <img style="border:0;width:88px;height:31px"
+                         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                         alt="Valid CSS!" >
+                </a>
+            </p>
+        </div>
+    </footer>
 </div>
 
-<footer class="footer">
-    <a href="index.html" class="footerLogo">
-        <picture>
-            <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
-        </picture>
-        <p>ForkFolio-för dig som älskar mat!</p>
-    </a>
-    <div class="footerLinks">
-        <a href="add_recipe.html">Lägg till recept</a>
-        <a href="my_recipies.html"><span>Mina recept</span></a>
-    </div>
-    <div class="footerLinks">
-        <a href="categories.html?category=lunch"><span>Lunch </span></a>
-        <a href="categories.html?category=middag"><span>Middag </span></a>
-        <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
-    </div>
-
-    <div class="footerLinks">
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                     src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                     alt="Valid CSS!" >
-            </a>
-        </p>
-    </div>
-</footer>
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
