--- a/vegetables.html
+++ b/vegetables.html
@@ -10,100 +10,105 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="header">
-    <a href="index.html" class="logo">
-        <picture>
-            <img src="images/logo_64x64.png" alt="fork, spoon and knife logo">
-        </picture>
-        <h1 class="title">Forkfolio</h1>
-    </a>
-</header>
-<nav>
-    <div class="topBar" id="topBar">
-        <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
-            <span class="visually-hidden">Hamburger menu</span>
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="categories.html?category=lunch"><span>Lunch </span></a>
-        <a href="categories.html?category=middag"><span>Middag </span></a>
-        <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
-        <a href="my_recipies.html"><span>Mina recept</span></a>
-        <a href="add_recipe.html"><span>Lägg till recept</span></a>
-    </div>
-</nav>
-<div class="articleContainer">
-    <main>
-        <h1> Grönsaksboosta med säsongens grönsaker</h1>
-        <div class="imageContainer">
+<div class="wrapper">
+    <!-- Section: Header -->
+    <header class="header">
+        <a href="index.html" class="logo">
             <picture>
-                <source media="(min-width: 600px)" srcset="images/vegetables2/vegetables2_960.jpg">
-                <img src="images/vegetables2/vegetables2_480.jpg" alt="Bild på olika grönsaker">
+                <img src="images/logo/logo_64x64.png" alt="fork, spoon and knife logo">
             </picture>
-            <picture class="desktopOnly">
-                <source media="(min-width: 600px)" srcset="images/vegetables/vegetables_960.jpg">
-                <img src="images/vegetables/vegetables_480.jpg" alt="Bild på grönsaker på vit bakgrund">
-            </picture>
+            <h1 class="title">Forkfolio</h1>
+        </a>
+    </header>
+    <!-- Section: Navigation Bar -->
+    <nav>
+        <div class="topBar" id="topBar">
+            <a href="javascript:void(0);" class="icon" onclick="toggleNavState()">
+                <span class="visually-hidden">Hamburger menu</span>
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
+            <a href="add_recipe.html"><span>Lägg till recept</span></a>
         </div>
-        <div class="textContent">
-            <div class="textIntro">
-                Frukt och grönsaker trivs bäst olika tider på året. De som får mogna på egen hand kräver mindre energi, smakar mer,
-                innehåller mer näring och är ofta billigare. Här är några grönsaker och frukter som är i säsong under
-                olika delar av året:
+    </nav>
+    <!-- Section: Article section -->
+    <div class="articleContainer">
+        <main>
+            <h1> Grönsaksboosta med säsongens grönsaker</h1>
+            <div class="imageContainer">
+                <picture>
+                    <source media="(min-width: 600px)" srcset="images/vegetables2/vegetables2_960.jpg">
+                    <img src="images/vegetables2/vegetables2_480.jpg" alt="Bild på olika grönsaker">
+                </picture>
+                <picture class="desktopOnly">
+                    <source media="(min-width: 600px)" srcset="images/vegetables/vegetables_960.jpg">
+                    <img src="images/vegetables/vegetables_480.jpg" alt="Bild på grönsaker på vit bakgrund">
+                </picture>
+            </div>
+            <div class="textContent">
+                <div class="textIntro">
+                    Frukt och grönsaker trivs bäst olika tider på året. De som får mogna på egen hand kräver mindre energi, smakar mer,
+                    innehåller mer näring och är ofta billigare. Här är några grönsaker och frukter som är i säsong under
+                    olika delar av året:
+                </div>
+
+                <h2>Vår (april till juni):</h2>
+                <p>Svenska grönsaker: isbergssallad, kålrot, lök, morötter, palsternacka, potatis, purjolök, rotselleri,
+                    rödbeta, salladskål, sparris, vitkål, rabarber.
+                    Europeiska grönsaker (frilandsodlade): blomkål, broccoli, fänkål, mangold, citroner, persika.</p>
+                <h2>Sommar (juli till september):</h2>
+                <p>Svenska grönsaker: blomkål, broccoli, färska bönor, fänkål, gurka, isbergssallad, kronärtskocka,
+                    kålrabbi,
+                    lök, mangold, majs, morot, palsternacka, paprika, potatis, purjolök, rotselleri, rädisor, rödbetor,
+                    salladskål, sockerärter, sparris, spenat, stjälkselleri, tomater, vitkål, zucchini.
+                    Frukter: rabarber, vinbär, nätmelon, körsbär, krusbär, jordgubbar, hallon, blåbär, plommon, päron.
+                    Europeiska grönsaker (frilandsodlade): mangold, paprika, melon, nektarin, persika.</p>
+                <ol>
+                    <li><h3 class="inList">Grillpannestekt isbergssallad med chorizosås och parmesan</h3></li>
+                    <li><h3 class="inList">Lättkokt isbergssallad med smält smör</h3></li>
+                    <li><h3 class="inList">Sallad med rotsaker och vitkål</h3></li>
+                    <li><h3 class="inList">Rabarberkompott</h3></li>
+                </ol>
+                <p>Att äta säsongsmat är inte bara gott utan också bra för miljön. Så njut av dessa hälsosamma grönsaker
+                    och frukter när de är i säsong!</p>
             </div>
 
-            <h2>Vår (april till juni):</h2>
-            <p>Svenska grönsaker: isbergssallad, kålrot, lök, morötter, palsternacka, potatis, purjolök, rotselleri,
-                rödbeta, salladskål, sparris, vitkål, rabarber.
-                Europeiska grönsaker (frilandsodlade): blomkål, broccoli, fänkål, mangold, citroner, persika.</p>
-            <h2>Sommar (juli till september):</h2>
-            <p>Svenska grönsaker: blomkål, broccoli, färska bönor, fänkål, gurka, isbergssallad, kronärtskocka,
-                kålrabbi,
-                lök, mangold, majs, morot, palsternacka, paprika, potatis, purjolök, rotselleri, rädisor, rödbetor,
-                salladskål, sockerärter, sparris, spenat, stjälkselleri, tomater, vitkål, zucchini.
-                Frukter: rabarber, vinbär, nätmelon, körsbär, krusbär, jordgubbar, hallon, blåbär, plommon, päron.
-                Europeiska grönsaker (frilandsodlade): mangold, paprika, melon, nektarin, persika.</p>
-            <ol>
-                <li><h3 class="inList">Grillpannestekt isbergssallad med chorizosås och parmesan</h3></li>
-                <li><h3 class="inList">Lättkokt isbergssallad med smält smör</h3></li>
-                <li><h3 class="inList">Sallad med rotsaker och vitkål</h3></li>
-                <li><h3 class="inList">Rabarberkompott</h3></li>
-            </ol>
-            <p>Att äta säsongsmat är inte bara gott utan också bra för miljön. Så njut av dessa hälsosamma grönsaker
-                och frukter när de är i säsong!</p>
+        </main>
+    </div>
+    <!-- Section Footer  -->
+    <footer class="footer">
+        <a href="index.html" class="footerLogo">
+            <picture>
+                <source media="(min-width: 1201px)" srcset="images/logo/logo_64x64.png" >
+                <img src="images/logo/logo_32x32.png" alt=" fork, spoon and knife logo">
+            </picture>
+            <p>ForkFolio-för dig som älskar mat!</p>
+        </a>
+        <div class="footerLinks">
+            <a href="add_recipe.html">Lägg till recept</a>
+            <a href="my_recipies.html"><span>Mina recept</span></a>
         </div>
-
-    </main>
+        <div class="footerLinks">
+            <a href="categories.html?category=lunch"><span>Lunch </span></a>
+            <a href="categories.html?category=middag"><span>Middag </span></a>
+            <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
+        </div>
+        <div class="footerLinks">
+            <p>
+                <a href="http://jigsaw.w3.org/css-validator/validator?lang=en&profile=css3svg&uri=https%3A%2F%2Fkattisa.github.io%2Fforkfolio%2Findex.html&usermedium=all&vextwarning=&warning=1">
+                    <img style="border:0;width:88px;height:31px"
+                         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                         alt="Valid CSS!" >
+                </a>
+            </p>
+        </div>
+    </footer>
 </div>
-
-<footer class="footer">
-    <a href="index.html" class="footerLogo">
-        <picture>
-            <source media="(min-width: 1201px)" srcset="images/logo_64x64.png" >
-            <img src="images/logo_32x32.png" alt=" fork, spoon and knife logo">
-        </picture>
-        <p>ForkFolio-för dig som älskar mat!</p>
-    </a>
-    <div class="footerLinks">
-        <a href="add_recipe.html">Lägg till recept</a>
-        <a href="my_recipies.html"><span>Mina recept</span></a>
-    </div>
-    <div class="footerLinks">
-        <a href="categories.html?category=lunch"><span>Lunch </span></a>
-        <a href="categories.html?category=middag"><span>Middag </span></a>
-        <a href="categories.html?category=vegetariskt"><span>Vegetariskt </span></a>
-    </div>
-
-    <div class="footerLinks">
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                     src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-                     alt="Valid CSS!" >
-            </a>
-        </p>
-    </div>
-</footer>
 <script>
+    // Top bar navigation function for displaying the menu
     function toggleNavState() {
         let topBar = document.getElementById("topBar");
         if (topBar.className === "topBar") {
